<?xml version="1.0"?>
<package>
  <name>ros_control_robot</name>
  <version>0.0.0</version>
  <description>Implementation of a generic multi-robot ros_control loop</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <author email="toni@shadowrobot.com">Toni Oliver</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>